--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ distro==1.9.0
 exceptiongroup==1.3.0
 fastavro==1.11.1
 filelock==3.18.0
+fpdf==1.7.2
 fsspec==2025.5.1
 gitdb==4.0.12
 GitPython==3.1.44
@@ -35,6 +36,7 @@ openai==1.82.1
 packaging==24.2
 pandas==2.2.3
 pillow==11.2.1
+plotly==6.1.2
 protobuf==6.31.1
 pyarrow==20.0.0
 pycparser==2.22
